Fix spacing between boxes

--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,14 @@ h1 {
   border-left: none;
   border-right: none;
 }
+
+@media only screen and (min-width: 60em) {
+
+  .padding-right {
+    padding-right: .5em;
+  }
+
+  .padding-left {
+    padding-left: .5em;
+  }
+}
